[package]
name = "claude-task-manager"
version = "0.12.0"
edition = "2024"
description = "Claude-first task management CLI with AI-assisted development workflows"
license = "MIT"
repository = "https://github.com/jimmc414/claude-task-manager"
keywords = ["claude", "task", "cli", "ai", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ctm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = "0.4"
terminal_size = "0.4"
unicode-width = "0.2.0"
nanoserde = "0.2.1"
home = "0.5.11"

[dev-dependencies]
tempfile = "3.19.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
